Fixed global font and added wrap to reviews

--- a/Website/src/css/main.css
+++ b/Website/src/css/main.css
@@ -14,7 +14,7 @@
 }
 
 html * {
-    font-family: "K2D", serif !important;
+    font-family: "K2D", sans-serif;
 }
 body {
     background: var(--gradient);
