--- a/Website/src/css/review.css
+++ b/Website/src/css/review.css
@@ -1,8 +1,9 @@
 .reviews {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     padding-bottom: 16px;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
 .review {
@@ -13,7 +14,7 @@
     padding: 16px;
     margin: 16px;
     width: 100%;
-    max-width: 400px;
+    max-width: 250px;
 }
 textarea {
     font-size: 14px;
